--- a/templates/_base.html
+++ b/templates/_base.html
@@ -63,6 +63,13 @@
 
     <!-- Template Stylesheet -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- Favicon para Google y navegadores -->
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+
+    <!-- Opcional para iOS -->
+    <link rel="apple-touch-icon" href="/favicon.png">
+
     <link rel="icon" href="{% static 'img/logos/favicon.ico' %}" type="image/x-icon">
     
 
